# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2023-05-31 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the Rust CloudI API
        * Add subscribe_mut function for using closures with a context
        * Add messaging integration test

2023-05-30 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the Rust CloudI API
        * Add null and msg_size integration tests
    * Fix external service exit status log output to always use
      integer output for values <= 128 instead of the
      C/C++ CloudI API enum names ("OS pid PID exited with INTEGER")

2023-05-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add the beginnings of a Rust CloudI API implementation

2023-05-20 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 26.0 support
    * Update jinterface
    * Update erlang_go
    * Update erlang_hs
    * Update erlang_js
    * Update erlang_ml
    * Update erlang_pl
    * Update erlang_php
    * Update erlang_py
    * Update erlang_rb

2023-05-08 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_cron support for random ranges with the
      ~ (tilde) character based on OpenBSD cron
    * Update quickrand

2023-03-27 Michael Truog   <mjtruog at protonmail dot com>

    * Fix average length of a Gregorian year constant
    * Improve ATS CloudI API function effect tags comment

2023-03-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_map_reduce:map_size/0 function
    * Change the OCaml use of num-1.1 to zarith-1.12 for big-integer support
      in the Erlang External Term Format
    * Update erlang_ml
    * Update erlang_py

2023-03-14 Michael Truog   <mjtruog at protonmail dot com>

    * Update erlang_go

2023-03-03 Michael Truog   <mjtruog at protonmail dot com>

    * Change the C++ CloudI API backtrace dependency order selection
      to binutils, libdw, libdwarf